Add support for BLAST XML v2.
Assisted-by: JAXB xjc 2.3.0.1